--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,17 +17,51 @@ main {
     align-items: center;
     flex-basis: 0;
     flex-grow: 5;
+
+    color: #eee;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #game-container > p {
     padding: 12px;
-    color: #eee;
-    font-family: 'Courier New', Courier, monospace;
+}
+
+#game {
+    display: flex;
 }
 
 canvas {
     border: 8px solid #666;
     background-color: #eee;
+}
+
+.player-list {
+    background-color: #111;
+    padding: 16px;
+}
+
+.player-list > h3 {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #666;
+}
+
+#players {
+    padding: 0;
+    list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+
+    min-width: 200px;
+}
+
+#players > li {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    column-gap: 12px;
 }
 
 .btn {
